# teseo

./: .gitignore  Makefile.in  README.md  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
build-aux/m4/: my_arg_enable.m4  my_check_stdlib_libcxx.m4  my_set_cc_flag.m4
include/: teseo.hpp
include/teseo/aux/: auxiliary_snapshot.hpp  auxiliary_view.hpp  builder.hpp  cache.hpp  cb_serialise_build.hpp  counting_tree.hpp  dynamic_view.hpp  item.hpp  partial_result.hpp  static_snapshot.hpp  static_view.hpp  view.hpp
include/teseo/bp/: buffer_pool.hpp  frame.hpp  physical_memory.hpp
include/teseo/context/: garbage_collector.hpp  global_context.hpp  property_snapshot.hpp  scoped_epoch.hpp  static_configuration.hpp  static_configuration.hpp.in  tc_list.hpp  tctimer.hpp  thread_context.hpp
include/teseo/gc/: garbage_collector.hpp  item.hpp  simple_queue.hpp  tc_queue.hpp
include/teseo/interface/: iterator.hpp  scan.hpp
include/teseo/memstore/: context.hpp  cursor_state.hpp  data_item.hpp  dense_file.hpp  direct_pointer.hpp  error.hpp  index.hpp  index_entry.hpp  key.hpp  latch_state.hpp  leaf.hpp  memstore.hpp  payload_file.hpp  payload_iterator.hpp  remove_vertex.hpp  scan.hpp  segment.hpp  sparse_file.hpp  update.hpp  vertex_table.hpp  wake_list.hpp
include/teseo/profiler/: direct_access.hpp  event_global.hpp  event_list.hpp  event_name.hpp  event_thread.hpp  rebal_global_list.hpp  rebal_list.hpp  rebal_profiler.hpp  rebal_stats.hpp  rebal_time_unit.hpp  rebal_timer.hpp  save_to_disk.hpp  scoped_timer.hpp
include/teseo/rebalance/: async_service.hpp  crawler.hpp  merge_operator.hpp  merger_service.hpp  plan.hpp  rebalance.hpp  rebalanced_leaf.hpp  scoped_leaf_lock.hpp  scratchpad.hpp  spread_operator.hpp  weighted_edge.hpp
include/teseo/runtime/: queue.hpp  runtime.hpp  task.hpp  timer_service.hpp  worker.hpp
include/teseo/transaction/: memory_pool.hpp  memory_pool_list.hpp  rollback_interface.hpp  transaction_impl.hpp  transaction_iterator.hpp  transaction_latch.hpp  transaction_list.hpp  transaction_sequence.hpp  undo.hpp  undo_buffer.hpp
include/teseo/util/: abtree.hpp  assembly.hpp  bitset.hpp  chrono.hpp  circular_array.hpp  circular_array_64k.hpp  compiler.hpp  cpu_topology.hpp  debug.hpp  error.hpp  interface.hpp  latch.hpp  libevent.hpp  numa.hpp  permutation.hpp  system.hpp  thread.hpp  timer.hpp  tournament_tree.hpp
src/: circular_array.hpp  context.cpp  context.hpp  error.cpp  error.hpp  garbage_collector.cpp  garbage_collector.hpp  index.cpp  index.hpp  index_vertex_id.cpp  index_vertex_id.hpp  latch.hpp  memstore.cpp  memstore.hpp  storage.cpp  storage.hpp  teseo.cpp  utility.cpp  utility.hpp
src/aux/: auxiliary_snapshot.cpp  auxiliary_view.cpp  builder.cpp  cache.cpp  cb_serialise_build.cpp  counting_tree.cpp  dynamic_view.cpp  item.cpp  partial_result.cpp  static_snapshot.cpp  static_view.cpp  view.cpp
src/bp/: buffer_pool.cpp  physical_memory.cpp
src/context/: garbage_collector.cpp  garbage_collector.hpp  global_context.cpp  global_context.hpp  property_snapshot.cpp  property_snapshot.hpp  property_snapshot.template  scoped_epoch.cpp  scoped_epoch.hpp  tc_list.cpp  tctimer.cpp  tctimer.hpp  thread_context.cpp  thread_context.hpp  transaction.cpp  transaction.hpp  transaction_impl.cpp  transaction_impl.hpp  undo.cpp  undo.hpp
src/gc/: epoch_garbage_collector.cpp  epoch_garbage_collector.hpp  garbage_collector.cpp  item.cpp  simple_queue.cpp  tc_queue.cpp
src/memstore/: async_rebal.cpp  async_rebal.hpp  context.cpp  cursor_state.cpp  data_item.cpp  dense_file.cpp  direct_pointer.cpp  gate.cpp  gate.hpp  index.cpp  index.hpp  key.cpp  key.hpp  latch_state.cpp  leaf.cpp  memstore.cpp  merger.cpp  merger.hpp  payload_file.cpp  payload_iterator.cpp  rebalancer.cpp  rebalancer.hpp  remove_vertex.cpp  remove_vertex.hpp  segment.cpp  sparse_array.cpp  sparse_array.hpp  sparse_file.cpp  splock.hpp  tlock.hpp  update.cpp  vertex_table.cpp  wake_list.cpp
src/memstore-old/: async_rebal.cpp  async_rebal.hpp  gate.cpp  gate.hpp  index.cpp  merger.cpp  merger.hpp  rebalancer.cpp  rebalancer.hpp  remove_vertex.cpp  remove_vertex.hpp  sparse_array.cpp  sparse_array.hpp
src/profiler/: direct_access.cpp  event_global.cpp  event_global.hpp  event_list.hpp  event_name.hpp  event_thread.cpp  event_thread.hpp  rebal_global_list.cpp  rebal_list.cpp  rebal_profiler.cpp  rebal_stats.cpp  rebalancing.cpp  rebalancing.hpp  save_to_disk.cpp  scoped_timer.cpp  scoped_timer.hpp
src/rebalance/: async_service.cpp  crawler.cpp  merge_operator.cpp  merger_service.cpp  plan.cpp  rebalance.cpp  rebalanced_leaf.cpp  scoped_leaf_lock.cpp  scratchpad.cpp  spread_operator.cpp  weighted_edge.cpp
src/runtime/: queue.cpp  runtime.cpp  task.cpp  timer_service.cpp  worker.cpp
src/transaction/: memory_pool.cpp  memory_pool_list.cpp  rollback_interface.cpp  transaction_impl.cpp  transaction_list.cpp  transaction_sequence.cpp  undo.cpp  undo_buffer.cpp
src/util/: bitset.hpp  chrono.cpp  circular_array.hpp  cpu_topology.cpp  debug.cpp  error.cpp  interface.cpp  libevent.cpp  miscellaneous.cpp  miscellaneous.hpp  numa.cpp  permutation.hpp  system.cpp  thread.cpp  timer.cpp  timer.hpp
tests/: catch.cpp  context.cpp  index.cpp  latch.cpp  merger.cpp  parallel.cpp  remove_vertex.cpp  sparse_array.cpp  test_aux_snapshot.cpp  test_aux_view.cpp  test_aux_view.cpp.bck  test_buffer_pool.cpp  test_circular_array.cpp  test_context.cpp  test_cursor_state.cpp  test_cursor_state.cpp.bck  test_degree.cpp  test_dense_file.cpp  test_dense_file.cpp.bck  test_index.cpp  test_index.cpp.bck  test_index_data.hpp  test_index_vertex_id.cpp  test_iterator.cpp  test_iterator.cpp.bck  test_latch.cpp  test_memstore.cpp  test_merger.cpp  test_merger.cpp.bck  test_numa.cpp  test_parallel.cpp  test_parallel.cpp.bck  test_payload_file.cpp  test_rebalance.cpp  test_remove_vertex.cpp  test_scan.cpp  test_segment.cpp  test_sparse_array.cpp  test_sparse_array.cpp.bck  test_sparse_array_updates.cpp  (+10 more)
